Fix overlapping footer on student test page

--- a/app/frontend/styles/startpage.scss
+++ b/app/frontend/styles/startpage.scss
@@ -38,8 +38,7 @@
 }
 
 .student-login-footer {
-  position: absolute;
-  bottom: 0;
+  background-color: white;
   left: 50%;
   transform: translate(-50%, 0);
 }
